Fixed z-index issue on buttons

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,6 @@ button, .btn-round {
   font-weight: 400;
   text-transform: uppercase;
   outline: none;
-  z-index: 10;
 }
 
 .text-btn {
@@ -265,13 +264,7 @@ button:hover, .btn-round:hover, .slide-btn.selected {
 }
 
 @keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 rgba(242,176,111, 0);
-  }
-  50% {
-    box-shadow: 0 0 0 10px rgba(242,176,111, 0.3);
-  }
-  100% {
-    box-shadow: 0 0 0 20px rgba(242,176,111, 0.0);
-  }
+  0%   { box-shadow: 0 0 0 0 rgba(242,176,111, 0); }
+  50%  { box-shadow: 0 0 0 10px rgba(242,176,111, 0.3); }
+  100% { box-shadow: 0 0 0 20px rgba(242,176,111, 0.0); }
 }
